--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>checkpoints</title>
+    <title>Checkpoints</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but checkpoints doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
