--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
     <noscript>
       <strong>We're sorry but checkpoints doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="checkpoints-app"></div>
   </body>
 </html>
